# api-to-dataframe

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  auto_version_bump.sh  codecov.yml  conftest.py  pyproject.toml  setup.py  version_increment.sh
.github/workflows/: CD.yaml  CI-CD.yaml  CI.yaml
notebooks/: example.ipynb
src/api_to_dataframe/: __init__.py  main.py
src/api_to_dataframe/controller/: client_builder.py
src/api_to_dataframe/models/: get_data.py  retainer.py
src/api_to_dataframe/utils/: __init__.py  logger.py
tests/: conftest.py  test_controller_client_builder.py  test_integration.py  test_models_get_data.py  test_models_retainer.py  test_run.py  test_utils_logger.py
